--- a/templates/registro.html
+++ b/templates/registro.html
@@ -107,7 +107,7 @@
 																				<input class="file-input" type="file" name="file">
 																				<span class="file-cta">
 																						<span class="file-icon">
-																								<i class="fas fa-upload"></i>
+																								<i class="fas fa-upload material-icons">file_upload</i>
 																						</span>
 																						<span class="file-label">
 																								Logo…
@@ -134,7 +134,7 @@
 														<button class="button is-link">Submit</button>
 												</div>
 												<div class="control">
-														<a class="button is-link is-light" href="/registro">Cancel</a>
+														<a class="button is-link is-light" href="/">Cancel</a>
 												</div>
 										</div>
 
